--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <li>17 Tbit DDoS protection</li>
           </ul>
           <a
-            href="https://buy.stripe.com/8x23cw3pN3aG9PP6eZ53O00"
+            href="https://buy.stripe.com/7sYaEY9ObaD8bXX6eZ53O02"
             target="_blank"
             rel="noopener"
             class="card-button"
@@ -130,7 +130,9 @@
             <li>17 Tbit DDoS protection</li>
           </ul>
           <a
-            href="#"
+            href="https://buy.stripe.com/28EaEYgcz7qW2nn7j353O03"
+            target="_blank"
+            rel="noopener"
             class="card-button"
             >💳 Bestel nu</a
           >
@@ -155,7 +157,7 @@
             <li>No slot limit</li>
             <li>17 Tbit DDoS protection</li>
           </ul>
-          <a href="#" class="card-button">💳 Bestel nu</a>
+          <a href="https://buy.stripe.com/cNifZi9ObeTo3rrdHr53O04" target="_blank" rel="noopener" class="card-button">💳 Bestel nu</a>
         </div>
 
         <!-- FXServer IV -->
@@ -176,7 +178,7 @@
             <li>No slot limit</li>
             <li>17 Tbit DDoS protection</li>
           </ul>
-          <a href="#" class="card-button">💳 Bestel nu</a>
+          <a href="https://buy.stripe.com/9B6aEYf8v12y7HH1YJ53O05" target="_blank" rel="noopener" class="card-button">💳 Bestel nu</a>
         </div>
 
         <!-- FXServer V -->
@@ -197,7 +199,7 @@
             <li>No slot limit</li>
             <li>17 Tbit DDoS protection</li>
           </ul>
-          <a href="#" class="card-button">💳 Bestel nu</a>
+          <a href="https://buy.stripe.com/eVqcN6bWjfXs6DD0UF53O06" target="_blank" rel="noopener" class="card-button">💳 Bestel nu</a>
         </div>
       </div>
     </div>
