--- a/index.html
+++ b/index.html
@@ -201,6 +201,24 @@
           </ul>
           <a href="https://buy.stripe.com/eVqcN6bWjfXs6DD0UF53O06" target="_blank" rel="noopener" class="card-button">💳 Bestel nu</a>
         </div>
+
+        <!-- EUP Key -->
+        <div class="pricing-card">
+          <div class="card-header">
+            <h3 class="package-name">EUP Key</h3>
+            <div class="price">
+              <span class="currency">€</span>
+              <span class="amount">15,00</span>
+              <span class="period">Per maand</span>
+            </div>
+          </div>
+          <ul class="features-list">
+            <li>128 slots</li>
+            <li>EUP Key licentie</li>
+            <li>Direct activatie</li>
+          </ul>
+          <a href="https://buy.stripe.com/9B628s4tR9z40ffcDn53O07" target="_blank" rel="noopener" class="card-button">💳 Bestel nu</a>
+        </div>
       </div>
     </div>
   </section>
